# super_modbus_lib

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: workflow.yaml
cmake/: AddCoverage.cmake  AddMemCheck.cmake
examples/: CMakeLists.txt  example_master_rtu.cpp
include/: endian_helpers.hpp  mb_crc16.hpp  mb_data_handlers.hpp  mb_function.hpp  mb_register.hpp
include/mb_function/: mb_address_span.hpp  mb_function_code.hpp  mb_request.hpp
src/: mb_function.cpp  mb_hello.cpp
test/: CMakeLists.txt  endian_helpers.cpp  gtest_test.cpp  rtu_parser.cpp  rtu_parser_general.hpp  rtu_parser_read_coil.cpp  rtu_parser_read_hr.cpp  rtu_parser_read_ir.cpp  rtu_read_requests.cpp  test.cpp
